deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-south-1:719591212312:certificate/e2c19ff5-6359-4f3c-b67c-6dbb1f8bd949
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  labels:
    app: api-server
  name: api-server
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
  selector:
    app: api-server
  sessionAffinity: None
  type: LoadBalancer
