deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-server
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 3000
          - path: /api
            backend:
              serviceName: api-server
              servicePort: 3000
          - path: /docs
            backend:
              serviceName: api-server
              servicePort: 3000
